# CohortSec

./: .env  .env.example  README.md  SECURITY.md  docker-compose.yml  init-db.sql
.github/workflows/: ci.yml
backend/: .flake8  Dockerfile  pyproject.toml  requirements.txt  run_bot.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/core/: config.py  database.py  limiter.py  security.py
backend/app/crypto/: __init__.py  crypto_context.py  key_manager.py
backend/app/middleware/: __init__.py  security.py
backend/app/models/: __init__.py  anomaly.py  backup_config.py  backup_contact.py  backup_log.py  biometric_settings.py  breach.py  connected_account.py  encrypted_data.py  face_embedding.py  family_member.py  fraud_report.py  notification_link_token.py  onboarding.py  user.py  (+6 more)
backend/migrations/: add_subscription_tier.sql
backend/ml_models/: .gitkeep  anomaly_predictor.pkl
backend/scripts/: train_model.py
backend/telegram_bot/: __init__.py  handlers.py
backend/tests/: conftest.py  test_anomalies.py  test_auth.py  test_health.py  test_monitoring.py
cohortsec-desktop/: INSTALL.md  README.md  package-lock.json  package.json
cohortsec-desktop/src-tauri/: Cargo.toml  tauri.conf.json
cohortsec-desktop/src-tauri/capabilities/: default.json
cohortsec-desktop/src-tauri/src/: lib.rs  main.rs
frontend/: Dockerfile  index.html  nginx-ssl.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
keycloak/: vanguard-realm.json
(+157 files in other folders)
