[package]
name = "cohortsec-desktop"
version = "1.0.0"
description = "CohortSec — Цифровой телохранитель"
authors = ["CohortSec"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "cohortsec_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2"
